# Multi-Tenant-Task-Management-System

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  timelines.md
.github/workflows/: ci-cd.yml
app/: main.py
app/backend/: dependencies.py  main.py
app/backend/core/: config.py  database.py  security.py
app/backend/models/: base.py  task.py  user.py
app/backend/routers/: auth.py  tasks.py  users.py
app/backend/schemas/: auth.py  base.py  task.py  user.py
app/backend/services/: auth_service.py  task_service.py  user_service.py
app/backend/utils/: logger.py
app/tests/backend/unit/services/: test_user_service.py
migrations/: env.py
migrations/versions/: abda4ef579c4_initial.py
